layout issue fixed

--- a/tolopay/src/Components/Navbar/Navbar.css
+++ b/tolopay/src/Components/Navbar/Navbar.css
@@ -19,19 +19,27 @@
   font-size: 30px;
   margin-right: 15px;
   padding: 10px;
-  
+  transition: all 0.9s ease-in-out 0s;
   
 
+}
+.navbar a:hover{
+  cursor: pointer;
+    transform: rotate(360deg);
+    transition: all 0.3s ease-in-out 0s;
 }
 
 .navbar icon{
   margin-bottom: -15px;
 }
+
 /* Right-aligned link */
 .navbar a.right {
   float: right;
   padding: 20px;
-  color:#02ba4b;
+  /* color:#02ba4b; */
+  color: #41d3f3;
+  
 }
 /* .user{
  width: 50px;
