--- a/tolopay/src/Components/ProfileComponent/Profile.css
+++ b/tolopay/src/Components/ProfileComponent/Profile.css
@@ -17,7 +17,7 @@ a {
 }
 
 .menu-trigger img{
-  position: fixed;
+  position: absolute;
   top: 20px;
   right: 20px;
   height: 45px;
@@ -25,11 +25,19 @@ a {
   border-radius: 50%;
   overflow: hidden;
   cursor: pointer;
-  background-color: #02ba4b;
+  /* background-color: #02ba4b; */
+  background-color: #41d3fe;
+  transition: all 0.9s ease-in-out 0s;
+  
+}
+.menu-trigger img:hover{
+  cursor: pointer;
+    transform: rotate(360deg);
+    transition: all 0.5s ease-in-out 0s;
 }
 
 .dropdown-menu{
-  position: absolute;
+  position: fixed;
   top: 95px;
   right: 20px;
   background-color: #fff;
@@ -65,22 +73,7 @@ a {
 }
 
 
-h3{
-  width: 100%;
-  text-align: center;
-  font-size: 18px;
-  padding: 20px 0;
-  font-weight: 500;
-  font-size: 18px;
-  color: var(--primary-text-color);
-  line-height: 1.2rem;
-}
 
-h3 span{
-  font-size: 14px;
-  color: var(--secondary-text-color);
-  font-weight: 400;
-}
 
 .dropdown-menu ul li{
   padding: 10px  0;
